--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,11 @@
 .App-link {
   color: #61dafb;
 }
-
+.card-title {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
