--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,139 @@
-.App {
+.jumbotron {
+  background-color: #2c2e31 !important;
+  color: #fff !important;
+}
+.rug {
+  margin: 0;
+  padding-top: 30px;
+  font-size: 48px;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+.rugP {
+  display: block;
+  text-align: center;
+  padding-bottom: 100px !important;
+}
+.userWrapper {
+  display: block;
+  margin: 0 auto;
+  overflow: hidden;
+  background-color: #fff;
+  margin-top: -180px;
+  max-width: 730px;
+  width: 100%;
+  position: relative;
+  padding: 20px 0;
+}
+.userImg {
+  position: relative;
+  background: #fff;
+  padding: 5px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  margin: 0 auto;
+  overflow: hidden;
+  z-index: 2;
+}
+.userImg img {
+  display: block;
+  width: 138px;
+  border-radius: 50%;
+}
+.social {
+  display: block;
+  text-align: center;
+  margin-top: 30px;
+}
+.social span {
+  cursor: pointer;
+  display: inline-block;
+  width: 40px;
+  height: 48px;
+  -webkit-transition: all 0.25s ease-out;
+  transition: all 0.25s ease-out;
+  text-align: center;
+  color: #bdbdbd;
+}
+.social span + span {
+  margin-left: 40px;
+}
+.social span i {
+  cursor: pointer;
+  display: block;
+  width: 40px;
+  height: 48px;
+  background-image: url(https://randomuser.me/img/card_icons.png);
+  background-size: 378px;
+  background-position-y: -48px;
+  -webkit-transition: all 0.25s ease-out;
+  transition: all 0.25s ease-out;
+}
+.user {
+  background-position: 0 -96px;
+}
+.envelope {
+  background-position: -68px -48px;
+}
+.calendar {
+  background-position: -135px -96px;
+}
+.map-marker {
+  background-position: -203px -48px;
+}
+.phone {
+  background-position: -270px -48px;
+}
+.unlock-alt {
+  background-position: -338px -48px;
+}
+.social span i.user.active {
+  background-position: 0 -96px;
+}
+.social span i.envelope.active {
+  background-position: -68px -96px;
+}
+.social span i.calendar.active {
+  background-position: -135px -96px;
+}
+.social span i.map-marker.active {
+  background-position: -203px -96px;
+}
+.social span i.phone.active {
+  background-position: -270px -96px;
+}
+.social span i.unlock-alt.active {
+  background-position: -338px -96px;
+}
+.userInfo {
+  display: block;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.user_title {
+  display: block;
+  text-align: center;
+  font-size: 16px;
+  margin: 10px 0;
+}
+.user_value {
+  display: block;
+  text-align: center;
+  color: #2c2e31;
+  font-size: 38px;
+  margin: 5px;
+  text-transform: capitalize;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.userWrapper:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  top: 0;
+  background: #f9f9f9;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  z-index: 1;
 }
