--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,204 @@
-.form-group p {
-  color: red;
+body {
+  background-color: #111;
+}
+body,
+html {
+  font-size: 100%;
+  padding: 0;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.bg_color {
+  background-color: #111;
+}
+.sb_color {
+  background-color: #000000;
+}
+.btn_color {
+  background-color: #ffca28;
+}
+.sideBar {
+  top: 0;
+  position: absolute;
+  left: 0;
+  transition: 0.5s;
+  padding: 0;
+  margin-top: 24px;
+  margin-left: 24px;
+  height: calc(100vh - 48px);
+  background-size: cover;
+  background-position: center left;
+  width: 30%;
+  border-radius: 4px 0 0 4px;
+  background-color: #070908;
+}
+.main_content {
+  position: absolute;
+  width: calc(70%);
+  overflow: hidden;
+  height: calc(100% - 48px);
+  top: 24px;
+  right: 0px;
+  background-color: #111;
+  color: #fff;
+}
+.wrapper {
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.r_Navigation {
+  position: absolute;
+  right: -5px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+.r_Navigation li {
+  display: block;
+}
+.r_Navigation li + li {
+  margin-top: 30px;
+}
+.r_Navigation li a {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background-color: #111111;
+  line-height: 60px;
+  border-radius: 25px;
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.r_Navigation li a.selected {
+  background-color: #ffb400;
+}
+/*home page*/
+.mainContainer {
+  position: relative;
+  height: calc(100vh - 48px);
+  background-color: #222;
+  margin: 0px 15px 0px 0;
+}
+.absoluteContent {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  text-align: center;
+  display: block;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.absoluteContent h2 {
+  font-size: 48px;
+  font-weight: bold;
+  display: block;
+}
+.absoluteContent h2 span {
+  color: #ffb400;
+}
+.r_btn {
+  width: 153px;
+  height: 50px;
+  border: 1px solid #f2c94c;
+  box-sizing: border-box;
+  border-radius: 25px;
+  display: inline-block;
+  line-height: 48px;
+}
+.r_btn.active {
+  display: inline-block;
+  width: 153px;
+  height: 50px;
+  background: #ffca28;
+  border-radius: 25px;
+}
+.scroll-content {
+  display: block;
+  box-sizing: border-box;
+  margin-right: -12px;
+  height: calc(100vh - 48px);
+  overflow: hidden;
+  overflow-y: scroll;
+}
+.p_b_50 {
+  padding-bottom: 50px;
+}
+.scroll-content::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: transparent;
+}
+.scroll-content::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+.scroll-content::-webkit-scrollbar-thumb {
+  background-color: #ffb400;
+  border-radius: 10px;
+}
+/*about*/
+.flexDisplay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about-wrapper {
+  padding: 50px 30px 100px 60px;
+}
+.mainTitle {
+  display: block;
+  text-align: center;
+  padding-bottom: 53px;
+}
+.mainTitle h2 {
+  padding-bottom: 12px;
+  font-weight: 500;
+  font-size: 35px;
+  text-transform: uppercase;
+}
+.mainTitle h2 span {
+  color: #ffb400;
+}
+.mainTitle h6 {
+  text-transform: uppercase;
+}
+.title-inside {
+  padding-bottom: 33px;
+  line-height: 22px;
+}
+p {
+  font-size: 1em;
+  margin-bottom: 0 !important;
+}
+.first-para {
+  padding-bottom: 14px;
+}
+.service {
+  background: #f0f0f0;
+  padding: 98px 30px 53px 60px;
+}
+.funfact-item {
+  padding-bottom: 40px;
+}
+.svg-inline--fa.fa-w-14 {
+  width: 0.875em;
+}
+.funfact-item svg {
+  font-size: 72px;
+  padding-bottom: 32px;
+  color: #8982f7;
+}
+.funfact-item h2 {
+  font-size: 42px;
+  font-weight: 300;
+  padding-bottom: 7px;
 }
