--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,411 @@
-.App {
+body {
+  background-color: #111;
+}
+body,
+html {
+  font-size: 100%;
+  padding: 0;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.bg_color {
+  background-color: #111;
+}
+.sb_color {
+  background-color: #000000;
+}
+.btn_color {
+  background-color: #ffca28;
+}
+.sideBar {
+  top: 0;
+  position: absolute;
+  left: 0;
+  transition: 0.5s;
+  padding: 0;
+  margin-top: 24px;
+  margin-left: 24px;
+  height: calc(100vh - 48px);
+  background-size: cover;
+  background-position: center left;
+  width: 20%;
+  border-radius: 4px 0 0 4px;
+  background-color: #070908;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+.user_img {
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+.react_logo {
+  width: 300px;
+  margin: 0 auto 50px auto;
+  display: block;
+}
+.main_content {
+  position: absolute;
+  width: calc(80%);
+  overflow: hidden;
+  height: calc(100% - 48px);
+  top: 24px;
+  right: 0px;
+  background-color: #111;
+  color: #fff;
+}
+.wrapper {
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.r_Navigation {
+  position: absolute;
+  right: -25px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.r_Navigation li {
+  display: block;
+}
+.r_Navigation li + li {
+  margin-top: 30px;
+}
+.r_Navigation li a {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background-color: #111111;
+  line-height: 60px;
+  border-radius: 25px;
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.r_Navigation li a.selected {
+  background-color: #ffb400;
+}
+/*home page*/
+.mainContainer {
+  position: relative;
+  height: calc(100vh - 48px);
+  background-color: #222;
+  margin: 0px 15px 0px 0;
+}
+.absoluteContent {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  text-align: center;
+  display: block;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.absoluteContent h2 {
+  font-size: 48px;
+  font-weight: bold;
+  display: block;
+}
+.absoluteContent h2 span {
+  color: #ffb400;
+}
+.r_btn {
+  width: 153px;
+  height: 50px;
+  border: 1px solid #f2c94c;
+  box-sizing: border-box;
+  border-radius: 25px;
+  display: inline-block;
+  line-height: 48px;
+}
+.r_btn.active {
+  display: inline-block;
+  width: 153px;
+  height: 50px;
+  background: #ffca28;
+  border-radius: 25px;
+}
+.scroll-content {
+  display: block;
+  box-sizing: border-box;
+  margin-right: -12px;
+  height: calc(100vh - 48px);
+  overflow: hidden;
+  overflow-y: scroll;
+}
+.p_b_50 {
+  padding-bottom: 50px;
+}
+.scroll-content::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: transparent;
+}
+.scroll-content::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+.scroll-content::-webkit-scrollbar-thumb {
+  background-color: #ffb400;
+  border-radius: 10px;
+}
+/*about*/
+.flexDisplay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about-wrapper {
+  padding: 50px 30px 100px 60px;
+}
+.mainTitle {
+  display: block;
+  text-align: center;
+  padding-bottom: 53px;
+}
+.mainTitle h2 {
+  padding-bottom: 12px;
+  font-weight: 500;
+  font-size: 35px;
+  text-transform: uppercase;
+}
+.mainTitle h2 span {
+  color: #ffb400;
+}
+.mainTitle h6 {
+  text-transform: uppercase;
+}
+.title-inside {
+  padding-bottom: 33px;
+  line-height: 22px;
+}
+p {
+  font-size: 1em;
+  margin-bottom: 0 !important;
+}
+.first-para {
+  padding-bottom: 14px;
+}
+.service {
+  background: #111111;
+  padding: 70px 30px 50px 60px;
+}
+.funfact-item {
+  padding-bottom: 40px;
+  text-align: center;
+}
+.svg-inline--fa.fa-w-14 {
+  width: 40px;
+}
+.funfact-item svg {
+  font-size: 72px;
+  padding-bottom: 32px;
+  color: #ffb400;
+}
+svg:not(:root).svg-inline--fa {
+  overflow: visible;
+}
+.svg-inline--fa.fa-w-16 {
+  width: 45px;
+}
+.svg-inline--fa.fa-w-12 {
+  width: 35px;
+}
+.funfact-item h2 {
+  font-size: 42px;
+  font-weight: 300;
+  padding-bottom: 7px;
+  color: #fff;
+}
+.funfact-item p {
+  color: #fff;
+}
+.about-video {
+  padding: 100px 30px 100px 60px;
+}
+.video-two,
+.video-bg {
+  position: relative;
+}
+.video-bg:before {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+.video-link:after {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -3px;
+  margin-top: -7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 7px 0 7px 10px;
+}
+.video-link:after,
+.video-link:hover::after {
+  content: "";
+  border-color: transparent transparent transparent #fff;
+}
+.video-bg:before {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+.video-bg img,
+.video-bg:before {
+  width: 100%;
+  border-radius: 5px;
+}
+.inner-wrapper {
+  padding-bottom: 23px;
+}
+.first-para {
+  padding-bottom: 14px;
+}
+.inner-wrapper .video-btn-wrapper {
+  margin-top: 25px;
+}
+
+img {
+  max-width: 100%;
+}
+
+.vertical-align-pt {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.pt-button,
+.pt-button span {
+  font-size: 15px;
+  transform-style: preserve-3d;
+}
+
+.bright-pt {
+  color: #fff;
+}
+
+.right-align-pt {
+  text-align: right;
+}
+
+.go-center,
+.preloader,
+.pt-button,
+.pt-button span {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.extented-right {
+  background-size: cover;
+  height: 100%;
+  right: 0;
+  position: absolute;
+  top: 0;
+  width: 50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title-pt h2 {
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+.title-pt h6 {
+  color: #696969;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inner-title {
+  padding-bottom: 17px;
 }
+
+.button-3d-pt {
+  position: relative;
+  margin-top: 25px;
+}
+
+.pt-button {
+  width: 150px;
+  height: 50px;
+  line-height: 50px;
+  perspective: 1000px;
+  transform-origin: center center;
+  position: absolute;
+  text-align: center;
+}
+
+.pt-button span,
+span.two-pt:before {
+  position: absolute;
+  height: 100%;
+  border-radius: 30px;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.pt-button span {
+  line-height: 46px;
+  background: rgba(255, 255, 255, 0.05);
+  backface-visibility: hidden;
+  color: #fff;
+  transition: all 1s ease;
+}
+
+span.one-pt {
+  transform: rotateX(0) translateZ(20px);
+}
+
+.pt-button:hover span.one-pt {
+  transform: rotateX(-180deg) translateZ(20px);
+}
+
+span.three-pt {
+  transform: rotateX(180deg) translateZ(20px);
+}
+
+.pt-button:hover span.three-pt {
+  transform: rotateX(0) translateZ(20px);
+}
+
+span.two-pt {
+  background: linear-gradient(to left, #cc72db, #737cdf);
+}
+
+span.two-pt:before {
+  content: "";
+  background: linear-gradient(315deg, #4cb5ff 0, #8982f7 100%);
+  transform: translateZ(-1px);
+}
+.pt-button:hover span.two-pt {
+  transform: rotateX(-180deg);
+}
+.mail-pt a:before,
+.main-nav ul li:before,
+.porfolio-img:before,
+.pt-button-regular:before {
+  content: "";
+}
+/* .sideBar {
+  background: url("./admin.jpeg") center right no-repeat;
+  background-size: cover;
+} */
