--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ html {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  font-family: "Poppins", sans-serif !important;
+}
+a:hover {
+  text-decoration: none;
 }
 .bg_color {
   background-color: #111;
@@ -33,7 +37,7 @@ html {
   height: calc(100vh - 48px);
   background-size: cover;
   background-position: center left;
-  width: 20%;
+  width: 350px;
   border-radius: 4px 0 0 4px;
   background-color: #070908;
   display: flex;
@@ -53,7 +57,7 @@ html {
 }
 .main_content {
   position: absolute;
-  width: calc(80%);
+  width: calc(100% - 374px);
   overflow: hidden;
   height: calc(100% - 48px);
   top: 24px;
@@ -68,33 +72,56 @@ html {
   justify-content: center;
 }
 .r_Navigation {
-  position: absolute;
-  right: -25px;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 2;
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding-left: 100px;
+  box-sizing: border-box;
 }
 .r_Navigation li {
   display: block;
+  position: relative;
+  padding: 7px 0 0 7px;
 }
 .r_Navigation li + li {
   margin-top: 30px;
 }
 .r_Navigation li a {
   position: relative;
-  width: 60px;
-  height: 60px;
-  background-color: #111111;
-  line-height: 60px;
-  border-radius: 25px;
   display: block;
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
   color: #fff;
   transition: all 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  text-transform: uppercase;
 }
 .r_Navigation li a.selected {
   background-color: #ffb400;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  padding: 3px;
+}
+.menu_name {
+  letter-spacing: 1px;
+}
+.menu_icon {
+  width: 50px;
+  height: 50px;
+  background-color: #2a2938;
+  line-height: 50px;
+  border-radius: 25px;
+  margin-right: 15px;
+  font-size: 18px;
+}
+.r_Navigation li a.selected .menu_icon {
+  background-color: #222222;
+}
+.r_Navigation li a.selected .menu_name {
+  color: #fff;
 }
 /*home page*/
 .mainContainer {
