--- a/src/Media.css
+++ b/src/Media.css
@@ -42,13 +42,15 @@
   }
   .scroll-content {
     margin-right: 0px;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     overflow-y: scroll;
   }
   .mainContainer {
     margin: 0px;
     height: 100vh;
+    padding-bottom: 20px;
+    box-sizing: border-box;
   }
   .scroll-content::-webkit-scrollbar-track {
     border-radius: 0;
@@ -66,5 +68,21 @@
     justify-content: left;
   }
 }
-
+@media (max-width: 420px) {
+  .absoluteContent h2 {
+    font-size: 35px;
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 360px) {
+  .r_btn,
+  .r_btn.active {
+    width: 130px;
+  }
+}
+@media (max-width: 320px) {
+  .absoluteContent h2 {
+    font-size: 30px;
+  }
+}
 /*media*/
