--- a/src/Media.css
+++ b/src/Media.css
@@ -38,7 +38,7 @@
     overflow-y: scroll;
   }
   .about-wrapper {
-    padding: 30px 0px;
+    padding: 30px 0px 60px 0;
   }
   .scroll-content {
     margin-right: 0px;
