--- a/src/Media.css
+++ b/src/Media.css
@@ -109,7 +109,7 @@
     padding: 30px 15px;
   }
   .about-video {
-    padding: 50px 15px;
+    padding: 50px 15px 100px 15px;
   }
 }
 @media (max-width: 360px) {
