--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,64 @@
     transform: rotate(360deg);
   }
 }
+
+.wrapper {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: auto auto auto;
+  background-color: #fff;
+  color: #444;
+  width: 100%;
+}
+
+.box {
+  background-color: #444;
+  color: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 150%;
+  display: flex;
+  flex-flow: column;
+}
+
+.box_1 {
+  grid-column: 1 / 3;
+  grid-row: 1;
+}
+.box_2 {
+  grid-column: 3;
+  grid-row: 1 / 3;
+}
+.box_3 {
+  grid-column: 1;
+  grid-row: 2;
+}
+.box_4 {
+  grid-column: 2;
+  grid-row: 2;
+}
+.box_5 {
+  grid-column: 1 / span 3;
+  grid-row: 3;
+}
+.box_9 {
+  grid-column: 1 / span 3;
+  grid-row: 5;
+}
+.box_13 {
+  grid-column: 1 /3;
+  grid-row: 7;
+}
+.box_14 {
+  grid-column: 3;
+  grid-row: 7;
+}
+
+@media (max-width: 960px) {
+  .wrapper {
+    display: block;
+  }
+  .box {
+    margin-bottom: 20px;
+  }
+}
