--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,40 +1,166 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: none;
+  list-style: none;
+  word-wrap: break-word;
+}
 body {
- margin:0;
- padding:0;
- background-color: #eee;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  line-height: 1.8;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  color: #666;
+  overflow-x: hidden;
 }
-a{
-  color:#000;
+a {
+  color: #000;
 }
-a:hover{
-  color:#000;
+a:hover {
+  color: #000;
 }
 /*homepage*/
-.logo_{
-  display:block;
-  width:80px;
-  margin:20px auto 30px auto;
+.navbar-default {
+  border: none;
+  border-radius: 0;
+  margin-bottom: 0;
+  width: 100%;
+  padding: 20px 0;
+  background: #fff;
+  transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
 }
-.navBar{
+.menu-top {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+}
+.navbar-expand-lg .navbar-nav .nav-link {
+  font-size: 16px;
+  font-weight: 500;
+  padding: 5px;
+  text-transform: capitalize;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  position: relative;
+  color: #000;
+}
+.navbar-nav li a:before,
+.navbar-nav li a:after {
+  display: inline-block;
+  opacity: 0;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+  -moz-transition: -moz-transform 0.3s, opacity 0.2s;
+  transition: transform 0.3s, opacity 0.2s;
+}
+.navbar-nav li a:before {
+  margin-right: 8px;
+  content: "[";
+  -webkit-transform: translate(20px);
+  -moz-transform: translate(20px);
+  transform: translate(20px);
+}
+.navbar-nav li a:after {
+  margin-left: 8px;
+  content: "]";
+  -webkit-transform: translate(-20px);
+  -moz-transform: translate(-20px);
+  transform: translate(-20px);
+}
+.navbar-default .navbar-nav > li > a:hover:before,
+.navbar-default .navbar-nav > li > a:hover:after,
+.navbar-default .navbar-nav > li.active > a:after,
+.navbar-default .navbar-nav > li.active > a:before {
+  opacity: 1;
+  -webkit-transform: translate(0px);
+  -moz-transform: translate(0px);
+  transform: translate(0px);
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #000;
+  background: none;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #000;
+  background-color: transparent;
+}
+.banner_bg:before {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.7);
+}
+.home_container {
   display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    background-color: rgb(214, 242, 255);
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
 }
-.navItem{
-  position:relative
+.banner_bg {
+  background-image: url(../images/banner.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
 }
-.navItem + .navItem{
-  margin-left:20px;
+.main_banner {
+  height: 700px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.navItem + .navItem:before{
-  content:"";
-  position:absolute;
-  left:-10px;
-  top:50%;
-  height:50%;
-  width:1px;
-  background-color:#000;
-  transform:translateY(-50%);
+.banner_content {
+  display: block;
+  text-align: center;
+}
+.sm_title {
+  color: #000;
+  font-size: 22px;
+  font-weight: 600;
+}
+.animated_text {
+  color: #000;
+  font-size: 35px;
+  display: flex;
+  align-items: center;
+}
+.animated_span {
+  font-size: 45px;
+  margin-left: 10px;
+  font-weight: 600;
+}
+.sub_title,
+.banner_social_link {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+.sub_title span {
+  position: relative;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+.designation_ span + span,
+.banner_social_link span + span {
+  margin-left: 25px;
+}
+.designation_ span + span:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -15px;
+  transform: translateY(-50%);
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #666;
 }
