--- a/blog/css/blog.css
+++ b/blog/css/blog.css
@@ -17,6 +17,13 @@ body {
     -webkit-text-size-adjust: none;
     -webkit-font-smoothing: subpixel-antialiased;
 }
+/*font awsome*/
+@font-face {font-family: 'FontAwesome';src: url('fonts/fontawesome-webfont.eot?v=4.6.3');
+src: url('fonts/fontawesome-webfont.eot?#iefix&v=4.6.3') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff2?v=4.6.3') format('woff2'), url('fonts/fontawesome-webfont.woff?v=4.6.3') format('woff'), url('fonts/fontawesome-webfont.ttf?v=4.6.3') format('truetype'), url('fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular') format('svg');font-weight: normal;font-style: normal}
+@font-face {font-family: 'FontAwesome';src: url('fonts/fontawesome-webfont.eot?v=4.6.3');src: url('fonts/fontawesome-webfont.eot?#iefix&v=4.6.3') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff2?v=4.6.3') format('woff2'), url('fonts/fontawesome-webfont.woff?v=4.6.3') format('woff'), url('fonts/fontawesome-webfont.ttf?v=4.6.3') format('truetype'), url('fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular') format('svg');font-weight: normal;font-style: normal}
+.fa {display: inline-block;font: normal normal normal 14px/1 FontAwesome;font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale}
+.fa-search:before {content: "\f002";}
+/*font awsome*/
 ul li, ol li {
     display: block;
 }
@@ -107,4 +114,111 @@ figure {
 }
 .post_meta_list a {
     color: #151515;
+}
+/*sidebar*/
+::placeholder{
+    color:#bdbdbd;
+}
+.sideBar{
+    border:1px solid #eee;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.sear_bar{
+    position:relative;
+    width:100%;
+    height:50px;
+     display:flex;
+}
+.sear_bar .input_search{
+    display:flex;
+    outline:none;
+    flex:1;
+    padding:5px 52px 5px 10px;
+    box-sizing:border-box;
+    border:none;
+    background-color:#eee;
+    color:#404040;
+}
+.fa_search{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    right:0;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #eee;
+}
+.sidebar_wrapper{
+    position:relative;
+}
+.sidebar_wrapper h4{
+    font-size:24px;
+    color:#000;
+    text-transform:uppercase;
+    font-weight: bold;
+    margin-bottom:20px;
+    position:relative;
+    display:inline-block;
+}
+.sidebar_wrapper h4:after{
+    content:"";
+    position:absolute;
+    bottom:5px;
+    right:-15px;
+    width: 0; 
+    height: 0; 
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;  
+    border-bottom: 5px solid tomato;
+    transform:rotate(-135deg);
+}
+.sidebar_wrapper ul.meta_ li{
+    position:relative;
+    list-style: none;
+    padding:10px 15px 10px 20px;
+}
+.sidebar_wrapper ul.meta_ li + li{
+    border-top:1px solid #eee;
+}
+.sidebar_wrapper ul.meta_ li:before{
+    content:"\f105";
+    position:absolute;
+    left:0;
+    top:50%;
+    transform:translateY(-50%);
+    font-family: FontAwesome;
+}
+.small_thumb{
+    display:flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.small_thumb span{
+    width:100px;
+    height: 100px;
+    background-color:#eee;
+    display:inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom:15px;
+}
+.fa-behance:before {
+    content: "\f1b4";
+}
+.fa-dribbble:before {
+    content: "\f17d";
+}
+.fa-linkedin:before {
+    content: "\f0e1";
+}
+.fa-twitter:before {
+    content: "\f099";
+}
+.fa-facebook-f:before, .fa-facebook:before {
+    content: "\f09a";
 }
