--- a/css/homepage.css
+++ b/css/homepage.css
@@ -201,7 +201,7 @@ a:hover {
   border-radius: 0;
   margin-bottom: 0;
   width: 100%;
-  padding: 20px 0;
+  /* padding: 20px 0; */
   background: #fff;
   transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
